# custom-nametag

./: .gitmodules  Makefile  README.md
main/: CMakeLists.txt  main.c
main/include/: main.h
resources/: nick.xcf  nick_gear.xcf
